MJ 17/07/05
- Cleaned up the time issue and introduced CommonState.getIntTime for
  protocols that need timestamps but want to avoid longs (for performance
  resons). CDState.getCycle and CDState.getCycleT are used only when
  absolutely necessary. A good practice is to use CommonState methods
  only, to allow compatibility with the evend driven engine.
  More to come...

MJ 16/07/05
- added support for wrapping cycle driven protocol implementations into
  an event driven simulation. All calls to nextCycle are managed by a separate
  event and the "step" parameter of the scheduler for the protocol serves
  as the cycle length. It can be different for all protocols, and the
  way the consequtive cycles are scheduled can be changed by extending
  NextCycleEvent.
  More to come...

MJ 15/07/05
- some strong refactoring of the entire stuff.
  THIS UPDATE WILL MOST LIKELY BRAKE YOUR APPLICATIONS
  it is a first step towards a new release which will not be fully backwards
  compatible, and will go through a major cleanup and reorganization, something
  we should have done a long time ago...
  Some changes that have been made:
  - Make sure packages util, graph and config compile without the other
    packages: they are fully independent units now. This involved moving some
    stuff: most notably, CommonRandom's gone, look for "r" in CommonState.
    "Log" was moved to core too. Some classes in util have a new Random
    argument as a result.
  - Removed difference between Observer and Dynamics: it was not enforcable
    anyway and introduced bloat in the code, and some config issues.
    Now there is only "Control", which might or might not change the network
    being simulated. As a result, code is simpler, config is very flexible
    without the need for scheduling tricks to determine the order of
    execution: just use alphabetial roder or the "include" trick in the
    config file ("include.control"). In your config files replace both